<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:id="@+id/grupo_op"
        android:checkableBehavior="single">

        <!--Inicio-->
        <item
            android:id="@+id/op_inicio"
            android:title="@string/op_inicio"
            android:icon="@drawable/ico_inicio"/>
        <!--Perfil-->
        <item
            android:id="@+id/op_perfil"
            android:title="@string/op_perfil"
            android:icon="@drawable/ico_perfil"/>
        <!--Configuración-->
        <item
            android:id="@+id/op_configuracion"
            android:title="@string/op_configuracion"
            android:icon="@drawable/ico_configuracion"/>



    </group>

    <!--Cerrar Sesión-->
    <item
        android:id="@+id/op_cerrar_sesion"
        android:title="@string/op_cerrar_sesion"
        android:icon="@drawable/ico_cerrar_sesion"/>

</menu>