<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/azul_oscuro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Usuario.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:text="@string/txtLogin"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/timeflex"
            android:layout_width="280dp"
            android:layout_height="180dp"/>
        <!--Correo-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@color/white"
            app:endIconTint="@color/white">

            <EditText
                android:id="@+id/etCorreo"
                android:hint="@string/etCorreo"
                android:drawableStart="@drawable/ico_correo"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Contraseña-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@color/white"
            app:endIconTint="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <EditText
                android:id="@+id/etcontrasena"
                android:hint="@string/etcontrasena"
                android:drawableStart="@drawable/ico_contrasena"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Botón-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:text="@string/btnLogin"
            android:textAllCaps="true"
            app:cornerRadius="45dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--Pregunta-->
        <TextView
            android:id="@+id/txtNoCuenta"
            android:text="@string/txtNoCuenta"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--Registro-->
        <TextView
            android:id="@+id/tvRegistrar"
            android:text="@string/tvRegistrar"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>