<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/azul_oscuro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Usuario.RegistroActivity">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:text="@string/txtRegistro"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/timeflex"
            android:layout_width="280dp"
            android:layout_height="180dp"/>

        <!--Nombre(s)-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@color/white"
            app:endIconTint="@color/white">

            <EditText
                android:id="@+id/etNombre"
                android:hint="@string/etNombre"
                android:drawableStart="@drawable/ico_nombre"
                android:drawablePadding="5dp"
                android:inputType="textPersonName|textCapWords"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Correo-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@color/white"
            app:endIconTint="@color/white">

            <EditText
                android:id="@+id/etCorreo"
                android:hint="@string/etCorreo"
                android:drawableStart="@drawable/ico_correo"
                android:drawablePadding="5dp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Constraseña-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@color/white"
            app:endIconTint="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <EditText
                android:id="@+id/etcontrasena"
                android:hint="@string/etcontrasena"
                android:drawableStart="@drawable/ico_contrasena"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Confirmar Contraseña-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@color/white"
            app:endIconTint="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <EditText
                android:id="@+id/etCcontrasena"
                android:hint="@string/etCcontrasena"
                android:drawableStart="@drawable/ico_contrasena"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!-- Botón -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistro"
            android:text="@string/btnRegistro"
            app:cornerRadius="45dp"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textColor="@color/azul_oscuro"
            android:backgroundTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>